# blender-asset-validator

./: .docstr.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  README.md  __init__.py  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
rpm_pyblish_plugins/: __init__.py  action_animations_delete.py  action_file_save.py  action_file_showinexplorer.py  action_material_setbackfaceculling.py  action_material_setdiffuse.py  action_material_setsamplerwrapping.py  action_material_setspecular.py  action_material_setusenodes.py  action_mesh_clearvertexcolors.py  action_mesh_limitboneinfluences.py  action_mesh_normalizeweights.py  action_mesh_renameuvmap.py  action_mesh_selectlooseedges.py  action_mesh_selectloosevertices.py  action_mesh_selectngons.py  action_mesh_selectnonmanifoldvertices.py  action_mesh_selectuvsoutofuvrange.py  action_mesh_selectverticesbyboneinfluence.py  action_mesh_selectverticesinvalidbones.py  action_mesh_selectvertsbynonnormalweights.py  action_mesh_selectvertsoutofuvrange.py  action_mesh_selectzeroareapolygons.py  action_mesh_selectzerolengthedges.py  action_mesh_selectzerouvareapolygons.py  action_object_applytransforms.py  action_object_cleartransforms.py  action_object_setmode.py  action_plugin_openurl.py  action_texture_reload.py  action_texture_setcolorspace.py  action_texture_setembedding.py  action_texture_setrelativepath.py  collect_animations.py  collect_assettype.py  collect_collections.py  collect_contextlabel.py  collect_current_file.py  collect_filestatus.py  collect_materials.py  (+48 more)
rpm_pyblish_plugins/unused/: extract_icon.py  validate_naming_parent.py  validate_object_hierarchycollections.py  validate_rig_hierarchybonenames.py  validate_texture_colorspace.py  validate_texture_fileformat.py  validate_texture_filepath.py  validate_texture_pbralbedo.py  validate_texture_pbrmetallic.py
rpm_validator/: __init__.py  ui.py
rpm_validator/configs/: Full_Body_Outfit.json  Full_body_costume.json  Hair.json  Headwear.json  Modular_bottom.json  Modular_footwear.json  Modular_top.json  Non_Customizable_Avatar.json  Outfit.json
rpm_validator_addon/: __init__.py
src/readyplayerme.asset_validator/: __init__.py
src/readyplayerme/pyblish_configs/: Facewear.json  Modular_footwear.json  Modular_top.json  Outfit.json
src/readyplayerme_asset_validator/: __init__.py  requirements.txt
