[build-system]
requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"


[tool.setuptools]
packages = ["rpm_validator", "rpm_pyblish_plugins"]


[project]
name = "rpm-validator"
authors = [
    {name = "Hannes"},
    {name = "Olaf"},
    {name = "Daniel"},
]
description = "a validator for your Ready Player Me assets"
readme = "README.md"
requires-python = ">=3.4"
keywords = ["blender", "ready player me", "avatar"]
#license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
]
#dynamic = ["dependencies"]
dependencies = ['importlib-metadata; python_version<"3.7"', 
"pyblish", 
"pyblish-simple @ git+https://github.com/hannesdelbeke/pyblish-simple",
"pyblish-plugin-manager @ git+https://github.com/hannesdelbeke/pyblish-plugin-manager",
"Qt5.py",
"numpy"
]

#dynamic = ["version"]
version = "0.0.1"

#[project.optional-dependencies]
#yaml = ["pyyaml"]

#[project.scripts]
#my-script = "my_package.module:function"

[project.urls]
# Homepage = "https://github.com/.."
# Source = "https://github.com/.."
